--- a/report.html
+++ b/report.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Monthly Report</title>
-  <link href="style.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <script src="util.js"></script>
+  <style>
+    .checkbox-cell {
+      padding: 0;
+    }
+    .checkbox-cell input {
+      margin: 0;
+      vertical-align: middle;
+    }
+    .toast {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #28a745;
+      color: #ffffff;
+      padding: 10px 20px;
+      border-radius: 5px;
+      font-size: 0.9rem;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+      z-index: 1000;
+    }
+    .toast.show {
+      opacity: 1;
+    }
+  </style>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -22,7 +48,6 @@
           <li class="nav-item"><a class="nav-link" href="employees.html">Employees</a></li>
           <li class="nav-item"><a class="nav-link active" href="report.html">Monthly Report</a></li>
           <li class="nav-item"><a class="nav-link active" href="Loan&Adv.html">loan</a></li>
-
           <li class="nav-item"><a class="nav-link" href="settings.html">Settings</a></li>
           <li class="nav-item"><a class="nav-link text-danger" href="index.html">Logout</a></li>
         </ul>
@@ -32,29 +57,35 @@
 
   <div class="container">
     <h1>Monthly Report</h1>
-    <div class="card">
+    <div class="card p-3">
       <h2>Select Month</h2>
-      <div class="input-group">
-        <input type="month" id="reportMonth" class="form-control">
+      <div class="input-group mb-3">
+        <input type="month" id="reportMonth" class="form-control" />
         <button onclick="generateReport()" class="btn btn-primary">Generate</button>
         <button onclick="downloadExcel()" class="btn btn-success">Download Excel</button>
+        <button onclick="saveMonthlyReport()" class="btn btn-secondary">Save Report</button>
       </div>
       <div id="monthInfo" class="mt-3"></div>
       <table id="reportTable" class="table table-bordered mt-3">
         <thead>
           <tr>
             <th>Employee</th>
-            <th>Present</th>
-            <th>Absent</th>
-            <th>Morning</th>
-            <th>Night</th>
             <th>Basic (₹)</th>
             <th>HRA (₹)</th>
             <th>Conveyance (₹)</th>
             <th>Others (₹)</th>
-            <th>Total (₹)</th>
-            <th>Loan EMI (₹)</th>
+            <th>Total Salary (₹)</th>
+            <th>Present</th>
+            <th>Absent</th>
+            <th>Morning</th>
+            <th>Night</th>
             <th>Advance (₹)</th>
+            <th>Total Loan (₹)</th>
+            <th>Loan Repaid (₹)</th>
+            <th>Remaining Loan (₹)</th>
+            <th>Loan EMI (₹)</th>
+            <th>Days</th>
+            <th>Hours</th>
             <th>Net Salary (₹)</th>
           </tr>
         </thead>
@@ -64,10 +95,6 @@
   </div>
 
   <script>
-    if (localStorage.getItem('isLoggedIn') !== 'true') {
-      window.location.href = 'index.html';
-    }
-
     function generateReport() {
       const month = document.getElementById('reportMonth').value;
       if (!month) return alert('Please select a month.');
@@ -77,29 +104,25 @@
       const shifts = JSON.parse(localStorage.getItem('shifts')) || {};
       const advances = JSON.parse(localStorage.getItem('advances')) || {};
       const loans = JSON.parse(localStorage.getItem('loans')) || {};
+      const extraHours = JSON.parse(localStorage.getItem('extraHours')) || {};
+      const lateHours = JSON.parse(localStorage.getItem('lateHours')) || {};
+      const carryForwardData = JSON.parse(localStorage.getItem(`carryForward_${month}`)) || [];
 
       const tbody = document.getElementById('reportTable').querySelector('tbody');
       tbody.innerHTML = '';
 
       const [year, monthNum] = month.split('-');
       const daysInMonth = new Date(year, monthNum, 0).getDate();
-
-      let totalPresent = 0;
-      let totalAbsent = 0;
+      let totalPresent = 0, totalAbsent = 0;
 
       employees.forEach((emp, index) => {
         if (!emp || !emp.name) return;
 
-        let presentDays = 0;
-        let absentDays = 0;
-        let morningShifts = 0;
-        let nightShifts = 0;
-
+        let presentDays = 0, absentDays = 0, morningShifts = 0, nightShifts = 0;
         for (let day = 1; day <= daysInMonth; day++) {
           const date = `${year}-${monthNum.padStart(2, '0')}-${String(day).padStart(2, '0')}`;
           const isPresent = attendance[date]?.[emp.name] || false;
           const shift = shifts[date]?.[emp.name] || 'morning';
-
           if (isPresent) {
             presentDays++;
             totalPresent++;
@@ -111,72 +134,164 @@
           }
         }
 
-        const dailySalary = emp.totalSalary / daysInMonth;
-        const payableBasic = (emp.basic / daysInMonth * presentDays).toFixed(2);
-        const payableHra = (emp.hra / daysInMonth * presentDays).toFixed(2);
-        const payableConveyance = (emp.conveyance / daysInMonth * presentDays).toFixed(2);
-        const payableOthers = (emp.others / daysInMonth * presentDays).toFixed(2);
-        const totalSalary = (dailySalary * presentDays).toFixed(2);
+        const payableBasic = emp.basic || 0;
+        const payableHra = emp.hra || 0;
+        const payableConveyance = emp.conveyance || 0;
+        const payableOthers = emp.others || 0;
+        const totalSalary = emp.totalSalary || (payableBasic + payableHra + payableConveyance + payableOthers);
+        const dailySalary = totalSalary / daysInMonth;
 
         const loanList = loans[emp.name] || [];
-        const totalLoanEMI = loanList.reduce((sum, l) => sum + (l.emi && l.remaining > 0 ? l.emi : 0), 0);
+        let totalLoan = 0, totalRepaid = 0, totalRemaining = 0, totalLoanEMI = 0;
         loanList.forEach(l => {
-          if (l.remaining > 0) l.remaining = Math.max(0, l.remaining - l.emi);
+          if (l.amount) totalLoan += l.amount;
+          if (l.amount && l.remaining !== undefined) totalRepaid += (l.amount - l.remaining);
+          if (l.remaining) totalRemaining += l.remaining;
+          if (l.emi && l.remaining > 0) {
+            totalLoanEMI += l.emi;
+            l.remaining = Math.max(0, l.remaining - l.emi);
+          }
         });
 
         const advanceList = advances[emp.name] || [];
         const totalAdvance = advanceList.reduce((sum, adv) => sum + (adv.amount || 0), 0);
 
-        const netSalary = (totalSalary - totalLoanEMI - totalAdvance).toFixed(2);
+        let totalExtraHours = 0, totalLateHours = 0;
+        for (let day = 1; day <= daysInMonth; day++) {
+          const date = `${year}-${monthNum.padStart(2, '0')}-${String(day).padStart(2, '0')}`;
+          totalExtraHours += extraHours[date]?.[emp.name] || 0;
+          totalLateHours += lateHours[date]?.[emp.name] || 0;
+        }
+        let totalHours = totalExtraHours - totalLateHours;
 
-        // Remove advance record only after successful download
-        sessionStorage.setItem(`advanceToClear_${emp.name}`, JSON.stringify(advanceList));
+        let { daysAdjustment, remainingHours } = calculateDaysAndHours(totalHours);
+        const carryForEmp = carryForwardData.find(e => e.empName === emp.name);
+        if (carryForEmp) {
+          if (!isNaN(carryForEmp.carryForward.days)) daysAdjustment += carryForEmp.carryForward.days;
+          if (!isNaN(carryForEmp.carryForward.hours)) remainingHours += carryForEmp.carryForward.hours;
+        }
+
+        const daysDisplay = daysAdjustment !== 0 ? `${daysAdjustment}d` : '';
+        const hoursDisplay = remainingHours !== 0 ? `${remainingHours.toFixed(1)}h` : '';
+        const hourlyRate = dailySalary / 12;
 
         const tr = document.createElement('tr');
         tr.className = index % 2 === 0 ? 'even-row' : 'odd-row';
         tr.innerHTML = `
           <td>${emp.name}</td>
-          <td>${presentDays}</td>
-          <td>${absentDays}</td>
-          <td>${morningShifts}</td>
-          <td>${nightShifts}</td>
           <td>₹${payableBasic}</td>
           <td>₹${payableHra}</td>
           <td>₹${payableConveyance}</td>
           <td>₹${payableOthers}</td>
           <td>₹${totalSalary}</td>
-          <td>₹${totalLoanEMI}</td>
+          <td>${presentDays}</td>
+          <td>${absentDays}</td>
+          <td>${morningShifts}</td>
+          <td>${nightShifts}</td>
           <td>₹${totalAdvance}</td>
-          <td>₹${netSalary}</td>`;
+          <td>₹${totalLoan.toFixed(2)}</td>
+          <td>₹${totalRepaid.toFixed(2)}</td>
+          <td>₹${totalRemaining.toFixed(2)}</td>
+          <td>₹${totalLoanEMI}</td>
+          <td class="checkbox-cell"><input type="checkbox" data-emp="${emp.name}" data-type="days" onchange="updateNetSalary(this)"> ${daysDisplay}</td>
+          <td class="checkbox-cell"><input type="checkbox" data-emp="${emp.name}" data-type="hours" onchange="updateNetSalary(this)"> ${hoursDisplay}</td>
+          <td class="net-salary" data-emp="${emp.name}">₹${(totalSalary - totalLoanEMI - totalAdvance).toFixed(2)}</td>`;
         tbody.appendChild(tr);
+
+        tr.dataset.initialSalary = (totalSalary - totalLoanEMI - totalAdvance).toFixed(2);
+        tr.dataset.dailySalary = dailySalary;
+        tr.dataset.hourlyRate = hourlyRate;
+        tr.dataset.daysAdjustment = daysAdjustment;
+        tr.dataset.remainingHours = remainingHours;
+        tr.dataset.currentAdjustment = 0; // Reset current adjustment
       });
 
       localStorage.setItem('loans', JSON.stringify(loans));
       document.getElementById('monthInfo').textContent = `Total Present: ${totalPresent}, Total Absent: ${totalAbsent}`;
     }
 
+    function updateNetSalary(checkbox) {
+      const tr = checkbox.closest('tr');
+      const empName = checkbox.getAttribute('data-emp');
+      const type = checkbox.getAttribute('data-type');
+      const initialSalary = parseFloat(tr.dataset.initialSalary);
+      const dailySalary = parseFloat(tr.dataset.dailySalary);
+      const hourlyRate = parseFloat(tr.dataset.hourlyRate);
+      const daysAdjustment = parseFloat(tr.dataset.daysAdjustment);
+      const remainingHours = parseFloat(tr.dataset.remainingHours);
+
+      // Recalculate adjustment based on current checkbox states
+      let newAdjustment = 0;
+      const daysChecked = tr.querySelector('input[data-type="days"]').checked;
+      const hoursChecked = tr.querySelector('input[data-type="hours"]').checked;
+
+      if (daysChecked && daysAdjustment !== 0) {
+        newAdjustment += daysAdjustment * dailySalary;
+      }
+      if (hoursChecked && remainingHours !== 0) {
+        newAdjustment += remainingHours * hourlyRate;
+      }
+
+      // Update net salary with the new adjustment
+      const netSalary = (initialSalary + newAdjustment).toFixed(2);
+      const netSalaryCell = tr.querySelector('.net-salary');
+      netSalaryCell.textContent = `₹${netSalary}`;
+
+      // Update current adjustment (reset to new value)
+      tr.dataset.currentAdjustment = newAdjustment;
+
+      // Show toast notification
+      const toast = document.createElement('div');
+      toast.className = 'toast';
+      toast.textContent = `New Net Salary for ${empName}: ₹${netSalary}`;
+      document.body.appendChild(toast);
+      setTimeout(() => {
+        toast.classList.add('show');
+        setTimeout(() => {
+          toast.classList.remove('show');
+          setTimeout(() => document.body.removeChild(toast), 300);
+        }, 2000);
+      }, 10);
+
+      // Update other rows for the same employee
+      const allRows = document.querySelectorAll(`tr[data-emp="${empName}"]`);
+      allRows.forEach(row => {
+        if (row !== tr) {
+          const rowNetSalaryCell = row.querySelector('.net-salary');
+          rowNetSalaryCell.textContent = `₹${netSalary}`;
+          row.dataset.currentAdjustment = newAdjustment;
+        }
+      });
+    }
+
     function downloadExcel() {
       const table = document.getElementById("reportTable");
       if (!table || table.rows.length <= 1) return alert("Please generate the report first.");
-
       const wb = XLSX.utils.book_new();
       const ws = XLSX.utils.table_to_sheet(table);
       XLSX.utils.book_append_sheet(wb, ws, "Monthly Report");
-
       const month = document.getElementById("reportMonth").value;
       const filename = month ? `Monthly_Report_${month}.xlsx` : `Monthly_Report.xlsx`;
-
       XLSX.writeFile(wb, filename);
+    }
 
-      // Clear advance after download
-      const advances = JSON.parse(localStorage.getItem("advances")) || {};
-      for (const key in advances) {
-        if (sessionStorage.getItem(`advanceToClear_${key}`)) {
-          advances[key] = [];
-          sessionStorage.removeItem(`advanceToClear_${key}`);
-        }
-      }
-      localStorage.setItem("advances", JSON.stringify(advances));
+    function saveMonthlyReport() {
+      const month = document.getElementById('reportMonth').value;
+      if (!month) return alert('Please select a month before saving.');
+      const reportData = [];
+      const rows = document.querySelectorAll('#reportTable tbody tr');
+      rows.forEach(row => {
+        const empName = row.cells[0].textContent;
+        const dayCheckbox = row.querySelector('input[data-type="days"]');
+        const hourCheckbox = row.querySelector('input[data-type="hours"]');
+        const carryForward = {
+          days: !dayCheckbox.checked ? parseFloat(row.dataset.daysAdjustment || 0) : 0,
+          hours: !hourCheckbox.checked ? parseFloat(row.dataset.remainingHours || 0) : 0
+        };
+        reportData.push({ empName, month, carryForward });
+      });
+      localStorage.setItem(`carryForward_${month}`, JSON.stringify(reportData));
+      alert(`Monthly Report for ${month} saved successfully!`);
     }
 
     window.onload = () => {
